src/objects/Capture_Team_Member__c.object
<CustomObject>
    <description>R4V1- This object refers to provide sharing model for Capture Team</description>
    <fields>
        <fullName>Access_Level__c</fullName>
        <description>R4v1- Capturing Team Member Access Level</description>
        <label>Access Level</label>
        <picklist>
            <picklistValues>
                <fullName>Read/Write</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>R5</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Capture_Team_Member__c</fullName>
        <description>R4 - Capture Team</description>
        <formula>Capture_Team__r.Account_Capture_Team__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Capture Team Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capture_Team__c</fullName>
        <description>R4v1- Capturing Capture Team record</description>
        <label>Capture Team</label>
        <referenceTo>Capture_Team__c</referenceTo>
        <relationshipLabel>Core Capture Team Members</relationshipLabel>
        <relationshipName>Capture_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <description>R4v1- Capturing Team Member role</description>
        <label>Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Capture Team Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front-End-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capture Team Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance, Tax Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tender Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R4v1- Capturing user who needs to get share End User Project</description>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Can not add System Administrator</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>System Administrator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Capture_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Core Capture Team Member</label>
    <nameField>
        <displayFormat>CTM-{0000000}</displayFormat>
        <label>Capture Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Core Capture Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>